# conf

./: README.md  pyproject.toml  requirements.txt  sample.env
confluence_ingest/: __init__.py  chunker.py  cli.py  confluence_client.py  db.py  loader.py  markdown_exporter.py  scraper.py  synth-qa.py  text_clean.py
confluence_ingest/embeddings/: base.py  dummy.py  ollama_provider.py  openai_provider.py  watsonx_provider.py
