[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-ingest"
version = "0.1.0"
description = "Scrape Confluence pages and load them into PostgreSQL with pgvector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atlassian-python-api>=3.41.11",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "psycopg[binary]>=3.1.12",
]

[project.optional-dependencies]
dev = ["rich>=13.7.0"]

[project.scripts]
confluence-ingest = "confluence_ingest.cli:main"
